66430022 Latest from Pruitt

--- a/reebill/ui/dla/index.html
+++ b/reebill/ui/dla/index.html
@@ -12,6 +12,9 @@
     <!-- Custom styles -->
     <link rel="stylesheet" type="text/css" href="style/style.css">
 
+    <!-- Icon styles -->
+    <link rel="stylesheet" type="text/css" href="style/icons.css">
+
     <!-- Ext JS Style -->
     <link rel="stylesheet" type="text/css" href="ext/resources/css/ext-all-gray.css">
 
@@ -29,20 +32,26 @@
     <link rel="stylesheet" type="text/css" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.css"/>
 
     <!-- Models -->
-    <script type="text/javascript" src="app/model/Tag.js"></script>
+    <script type="text/javascript" src="app/model/Image.js"></script>
     <script type="text/javascript" src="app/model/Region.js"></script>
+    <script type="text/javascript" src="app/model/Tag.js"></script>
 
     <!-- Stores -->
-    <script type="text/javascript" src="app/store/Tags.js"></script>
+    <script type="text/javascript" src="app/store/Images.js"></script>
     <script type="text/javascript" src="app/store/Regions.js"></script>
+    <script type="text/javascript" src="app/store/Tags.js"></script>
 
     <!-- Views -->
-    <script type="text/javascript" src="app/view/Tags.js"></script>
-    <script type="text/javascript" src="app/view/Regions.js"></script>
     <script type="text/javascript" src="app/view/DocumentViewer.js"></script>
+    <script type="text/javascript" src="app/view/Images.js"></script>
+    <script type="text/javascript" src="app/view/Regions.js"></script>
+    <script type="text/javascript" src="app/view/Tags.js"></script>
     <script type="text/javascript" src="app/view/Viewport.js"></script>
 
     <!-- Controllers -->
+    <script type="text/javascript" src="app/controller/DocumentViewer.js"></script>
+    <script type="text/javascript" src="app/controller/Exporter.js"></script>
+    <script type="text/javascript" src="app/controller/Images.js"></script>
     <script type="text/javascript" src="app/controller/Regions.js"></script>
     <script type="text/javascript" src="app/controller/Tags.js"></script>
     
