--- a/reebill/ui/billentry.html
+++ b/reebill/ui/billentry.html
@@ -50,6 +50,11 @@
     <link rel="stylesheet" type="text/css" href="ext-3.3.1/examples/ux/css/Spinner.css" /> 
 
     <!-- ** Javascript ** -->
+    <!-- PDF library -->
+    <script type="text/javascript" src="pdfjs/pdf.js"></script>
+    <script type="text/javascript" src="pdfjs/TextLayerBuilder.js"></script>
+    <link rel="stylesheet" type="text/css" href="pdfjs/TextLayer.css" />
+
     <!-- ExtJS library: base/adapter -->
     <!--script type="text/javascript" src="ext-3.3.1/adapter/ext/ext-base.js"></script-->
     <script type="text/javascript" src="ext-3.3.1/adapter/ext/ext-base-debug.js"></script>
