--- a/reebill/ui/login.html
+++ b/reebill/ui/login.html
@@ -2,7 +2,8 @@
     <head>
         <title>Log In</title>
         <script type="text/javascript" src="ext-3.3.1/adapter/ext/ext-base.js"></script>
-        <script type="text/javascript" src="ext-3.3.1/ext-all.js"></script>
+        <script type="text/javascript"
+                src="static/ext/ext-all-debug.js"></script>
         <script type="text/javascript" src="login.js"></script>
         <link rel="stylesheet" type="text/css" href="ext-3.3.1/resources/css/ext-all.css">
     </head>
