69569032 rest organization + copied certain code from "add charges migrate RSIs" branch

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -15,8 +15,8 @@
     <!-- Icon styles -->
     <link rel="stylesheet" type="text/css" href="static/style/icons.css">
 
-    <!--&lt;!&ndash; PDF viewer &ndash;&gt;-->
-    <!--<link rel="stylesheet" href="ext/ux/util/PDF/TextLayerBuilder.css">-->
+    <!-- PDF viewer -->
+    <link rel="stylesheet" href="static/ext/ux/util/PDF/TextLayerBuilder.css">
 
     <!-- Ext JS Style -->
     <link rel="stylesheet" type="text/css" href="static/ext/resources/css/ext-all-neptune.css">
@@ -26,11 +26,11 @@
     <script type="text/javascript" src="static/ext/ext-all-debug.js"></script>
     <script type="text/javascript" src="static/ext/src/grid/column/CheckColumn.js"></script>
 
-    <!--&lt;!&ndash; Ext UX PDF Viewer &ndash;&gt;-->
-    <!--<script src="ext/lib/pdf.js/compatibility.js"></script>-->
-    <!--<script src="ext/lib/pdf.js/pdf.js"></script>-->
-    <!--<script src="ext/ux/panel/PDF.js"></script>-->
-    <!--<script src="ext/ux/util/PDF/TextLayerBuilder.js"></script>-->
+    <!-- Ext UX PDF Viewer -->
+    <script src="static/ext/lib/pdf.js/compatibility.js"></script>
+    <script src="static/ext/lib/pdf.js/pdf.js"></script>
+    <script src="static/ext/ux/panel/PDF.js"></script>
+    <script src="static/ext/ux/util/PDF/TextLayerBuilder.js"></script>
 
     <!-- Config -->
     <script type="text/javascript" src="static/app/config.js"></script>
