Still fixing payments

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -35,6 +35,12 @@
     <!-- Ext PagingStore -->
     <script src="static/ext/ux/data/PagingStore.js"></script>
 
+    <!-- DateTimePicker -->
+    <script type="text/javascript" src="static/ext/ux/UX_TimePickerField.js"></script>
+    <script type="text/javascript" src="static/ext/ux/UX_DateTimePicker.js"></script>
+    <script type="text/javascript" src="static/ext/ux/UX_DateTimeField.js"></script>
+    <script type="text/javascript" src="static/ext/ux/UX_DateTimeMenu.js"></script>
+
     <!-- Config -->
     <script type="text/javascript" src="static/app/config.js"></script>
 
