76075114 Adding the formula field and showing the formula value of cells that have been clicked

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -89,6 +89,7 @@
     <script type="text/javascript" src="static/app/view/metersandregisters/UploadIntervalMeter.js"></script>
     <script type="text/javascript" src="static/app/view/metersandregisters/UtilityBillRegisters.js"></script>
     <script type="text/javascript" src="static/app/view/payments/Payments.js"></script>
+    <script type="text/javascript" src="static/app/view/ratestructures/FormulaField.js"></script>
     <script type="text/javascript" src="static/app/view/ratestructures/RateStructures.js"></script>
     <script type="text/javascript" src="static/app/view/reebillcharges/ReebillCharges.js"></script>
     <script type="text/javascript" src="static/app/view/reebills/Reebills.js"></script>
