75042542 Local paging is working

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 
 <html>
@@ -32,8 +31,8 @@
     <script src="static/ext/ux/panel/PDF.js"></script>
     <script src="static/ext/ux/util/PDF/TextLayerBuilder.js"></script>
 
-    <!-- Ext PagingStore -->
-    <script src="static/ext/ux/data/PagingStore.js"></script>
+    <!-- Ext PagingMemoryProxy -->
+    <script src="static/ext/ux/data/PagingMemoryProxy.js"></script>
 
     <!-- DateTimePicker -->
     <script type="text/javascript" src="static/ext/ux/UX_TimePickerField.js"></script>
@@ -58,6 +57,7 @@
 
     <!-- Stores -->
     <script type="text/javascript" src="static/app/store/Accounts.js"></script>
+    <script type="text/javascript" src="static/app/store/AccountsMemory.js"></script>
     <script type="text/javascript" src="static/app/store/IssuableReebills.js"></script>
     <script type="text/javascript" src="static/app/store/JournalEntries.js"></script>
     <script type="text/javascript" src="static/app/store/Payments.js"></script>
