75042542 working on local filtering

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -31,9 +31,6 @@
     <script src="static/ext/ux/panel/PDF.js"></script>
     <script src="static/ext/ux/util/PDF/TextLayerBuilder.js"></script>
 
-    <!-- Ext PagingMemoryProxy -->
-    <script src="static/ext/ux/data/PagingMemoryProxy.js"></script>
-
     <!-- DateTimePicker -->
     <script type="text/javascript" src="static/ext/ux/UX_TimePickerField.js"></script>
     <script type="text/javascript" src="static/ext/ux/UX_DateTimePicker.js"></script>
@@ -57,6 +54,7 @@
 
     <!-- Stores -->
     <script type="text/javascript" src="static/app/store/Accounts.js"></script>
+    <script type="text/javascript" src="static/app/store/AccountsFilter.js"></script>
     <script type="text/javascript" src="static/app/store/AccountsMemory.js"></script>
     <script type="text/javascript" src="static/app/store/IssuableReebills.js"></script>
     <script type="text/javascript" src="static/app/store/JournalEntries.js"></script>
