75042514 making the summary and export buttons work

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -88,6 +88,7 @@
     <script type="text/javascript" src="static/app/view/reebills/Reebills.js"></script>
     <script type="text/javascript" src="static/app/view/reebills/SequentialAccountInformation.js"></script>
     <script type="text/javascript" src="static/app/view/reebills/ReeBillVersions.js"></script>
+    <script type="text/javascript" src="static/app/view/reports/AccountDatePicker.js"></script>
     <script type="text/javascript" src="static/app/view/reports/Reconciliations.js"></script>
     <script type="text/javascript" src="static/app/view/reports/ExportReebill.js"></script>
     <script type="text/javascript" src="static/app/view/utilitybills/UploadUtilityBill.js"></script>
@@ -105,6 +106,7 @@
     <script type="text/javascript" src="static/app/controller/TabPanel.js"></script>
     <script type="text/javascript" src="static/app/controller/UtilityBills.js"></script>
     <script type="text/javascript" src="static/app/controller/UtilityBillRegisters.js"></script>
+    <script type="text/javascript" src="static/app/controller/Reports.js"></script>
     <script type="text/javascript" src="static/app/controller/Viewer.js"></script>
     
     <!-- Main Application -->
