--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -47,6 +47,7 @@
     <script type="text/javascript" src="static/app/model/JournalEntry.js"></script>
     <script type="text/javascript" src="static/app/model/Payment.js"></script>
     <script type="text/javascript" src="static/app/model/Reconciliation.js"></script>
+    <script type="text/javascript" src="static/app/model/EstimatedRevenue.js"></script>
     <script type="text/javascript" src="static/app/model/Reebill.js"></script>
     <script type="text/javascript" src="static/app/model/ReebillCharge.js"></script>
     <script type="text/javascript" src="static/app/model/UtilityBill.js"></script>
@@ -69,6 +70,7 @@
     <script type="text/javascript" src="static/app/store/UtilityBillRegisters.js"></script>
     <script type="text/javascript" src="static/app/store/ReeBillVersions.js"></script>
     <script type="text/javascript" src="static/app/store/UtilityBills.js"></script>
+    <script type="text/javascript" src="static/app/store/EstimatedRevenue.js"></script>
 
     <!-- Views -->
     <script type="text/javascript" src="static/app/view/accounts/AccountsCombo.js"></script>
@@ -90,6 +92,7 @@
     <script type="text/javascript" src="static/app/view/reebills/ReeBillVersions.js"></script>
     <script type="text/javascript" src="static/app/view/reports/AccountDatePicker.js"></script>
     <script type="text/javascript" src="static/app/view/reports/Reconciliations.js"></script>
+    <script type="text/javascript" src="static/app/view/reports/EstimatedRevenue.js"></script>
     <script type="text/javascript" src="static/app/view/reports/ExportReebill.js"></script>
     <script type="text/javascript" src="static/app/view/utilitybills/UploadUtilityBill.js"></script>
     <script type="text/javascript" src="static/app/view/utilitybills/UtilityBills.js"></script>
