75043772 storing sorting preferences

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -46,6 +46,7 @@
     <script type="text/javascript" src="static/app/model/IssuableReebill.js"></script>
     <script type="text/javascript" src="static/app/model/JournalEntry.js"></script>
     <script type="text/javascript" src="static/app/model/Payment.js"></script>
+    <script type="text/javascript" src="static/app/model/Preference.js"></script>
     <script type="text/javascript" src="static/app/model/Reconciliation.js"></script>
     <script type="text/javascript" src="static/app/model/EstimatedRevenue.js"></script>
     <script type="text/javascript" src="static/app/model/Reebill.js"></script>
@@ -65,6 +66,7 @@
     <script type="text/javascript" src="static/app/store/ReebillCharges.js"></script>
     <script type="text/javascript" src="static/app/store/Reebills.js"></script>
     <script type="text/javascript" src="static/app/store/Services.js"></script>
+    <script type="text/javascript" src="static/app/store/Preferences.js"></script>
     <script type="text/javascript" src="static/app/store/Timestamps.js"></script>
     <script type="text/javascript" src="static/app/store/Units.js"></script>
     <script type="text/javascript" src="static/app/store/UtilityBillRegisters.js"></script>
