75043772 adding a preferences panel and a currency spinner

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -98,6 +98,8 @@
     <script type="text/javascript" src="static/app/view/reports/ExportReebill.js"></script>
     <script type="text/javascript" src="static/app/view/utilitybills/UploadUtilityBill.js"></script>
     <script type="text/javascript" src="static/app/view/utilitybills/UtilityBills.js"></script>
+    <script type="text/javascript" src="static/app/view/preferences/CurrencySpinner.js"></script>
+    <script type="text/javascript" src="static/app/view/preferences/Preferences.js"></script>
     <script type="text/javascript" src="static/app/view/Viewport.js"></script>
 
     <!-- Controllers -->
