75043772 implemeted a preferences controller

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -115,7 +115,8 @@
     <script type="text/javascript" src="static/app/controller/UtilityBillRegisters.js"></script>
     <script type="text/javascript" src="static/app/controller/Reports.js"></script>
     <script type="text/javascript" src="static/app/controller/Viewer.js"></script>
-    
+    <script type="text/javascript" src="static/app/controller/Preferences.js"></script>
+
     <!-- Main Application -->
     <script type="text/javascript" src="static/app/app.js"></script>
 
