--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 
 <html>
-<head>
+<head profile="http://www.w3.org/2005/10/profile">
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=8" />
@@ -119,6 +119,9 @@
 
     <!-- Main Application -->
     <script type="text/javascript" src="static/app/app.js"></script>
+
+    <!--Favicons-->
+    <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
 
 </head>
 
