76698836 Adding the bottomtoolbar with revision information, account/sequence and logged in user

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -103,6 +103,7 @@
     <script type="text/javascript" src="static/app/view/Viewport.js"></script>
 
     <!-- Controllers -->
+    <script type="text/javascript" src="static/app/controller/BottomBar.js"></script>
     <script type="text/javascript" src="static/app/controller/Accounts.js"></script>
     <script type="text/javascript" src="static/app/controller/IssuableReebills.js"></script>
     <script type="text/javascript" src="static/app/controller/Journal.js"></script>
