76689608 starting to make pdfs work. Textlayer/Reebills need more work

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="static/style/icons.css">
 
     <!-- PDF viewer -->
-    <link rel="stylesheet" href="static/ext/ux/util/PDF/TextLayerBuilder.css">
+    <link rel="stylesheet" href="static/ext/lib/pdf.js/TextLayerBuilder.css">
 
     <!-- Ext JS Style -->
     <link rel="stylesheet" type="text/css" href="static/ext/resources/css/ext-all-neptune.css">
@@ -28,8 +28,8 @@
     <!-- Ext UX PDF Viewer -->
     <script src="static/ext/lib/pdf.js/compatibility.js"></script>
     <script src="static/ext/lib/pdf.js/pdf.js"></script>
+    <script src="static/ext/lib/pdf.js/TextLayerBuilder.js"></script>
     <script src="static/ext/ux/panel/PDF.js"></script>
-    <script src="static/ext/ux/util/PDF/TextLayerBuilder.js"></script>
 
     <!-- DateTimePicker -->
     <script type="text/javascript" src="static/ext/ux/UX_TimePickerField.js"></script>
