--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -72,6 +72,7 @@
     <script type="text/javascript" src="static/app/store/UtilityBillRegisters.js"></script>
     <script type="text/javascript" src="static/app/store/ReeBillVersions.js"></script>
     <script type="text/javascript" src="static/app/store/UtilityBills.js"></script>
+    <script type="text/javascript" src="static/app/store/UtilityBillsMemory.js"></script>
     <script type="text/javascript" src="static/app/store/EstimatedRevenue.js"></script>
 
     <!-- Views -->
