76814640 "Issue all processed Reebills" + code cleanup

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -58,6 +58,7 @@
     <script type="text/javascript" src="static/app/store/AccountsFilter.js"></script>
     <script type="text/javascript" src="static/app/store/AccountsMemory.js"></script>
     <script type="text/javascript" src="static/app/store/IssuableReebills.js"></script>
+    <script type="text/javascript" src="static/app/store/IssuableReebillsMemory.js"></script>
     <script type="text/javascript" src="static/app/store/JournalEntries.js"></script>
     <script type="text/javascript" src="static/app/store/Payments.js"></script>
     <script type="text/javascript" src="static/app/store/RateStructures.js"></script>
