--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=8" />
     
-    <title>Skyline ReeBill</title>
+    <title>ReeBill</title>
     
     <!-- Custom styles -->
     <link rel="stylesheet" type="text/css" href="static/style/style.css">
