78413318a code cleanup & fixed Confusing error message when server refuses a request

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -37,8 +37,9 @@
     <script type="text/javascript" src="static/ext/ux/UX_DateTimeField.js"></script>
     <script type="text/javascript" src="static/ext/ux/UX_DateTimeMenu.js"></script>
 
-    <!-- Config -->
+    <!-- Config & Utils-->
     <script type="text/javascript" src="static/app/config.js"></script>
+    <script type="text/javascript" src="static/app/utils.js"></script>
 
     <!-- Models -->
     <script type="text/javascript" src="static/app/model/Account.js"></script>
