78226136 Nextilify reebill email template

--- a/reebill/ui/issue_email_template.html
+++ b/reebill/ui/issue_email_template.html
@@ -6,14 +6,10 @@
 <p>Total Due {{balance_due}}</p>
 
 <p>Best Regards,<br/>
-Skyline Billing Department<br/>
-Skyline Innovations</p>
+Nextility Billing Department<br/>
 <br/>--
 <div style="text-align:center">
-    <b>SKYLINE INNOVATIONS</b>
-</div>
-<div style="text-align:center">
-    <font color="#33CC00" size="1"><b>Guaranteed Savings Through Green Energy</b></font>
+    <b>NEXTILITY</b>
 </div>
 <div style="text-align:center">
     <font size="1">1606 20th St NW, Second Floor, Washington DC 20009</font>
@@ -23,8 +19,8 @@ Skyline Innovations</p>
 </div>
 <div style="text-align:center">
     <font size="1">
-        <a href="http://www.skylineinnovations.com" target="_blank">
-            <b>http://www.skylineinnovations.com</b>
+        <a href="http://www.nextility.com" target="_blank">
+            <b>http://www.nextility.com</b>
         </a>
     </font>
 </div>
