78668104 fixed Refreshing some grids does not cause a request to be sent to the server, so outdated data are shown

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -31,6 +31,9 @@
     <script src="static/ext/lib/pdf.js/compatibility.js"></script>
     <script src="static/ext/ux/panel/PDF.js"></script>
 
+    <!-- PagingMemoryToolbar -->
+    <script src="static/ext/ux/toolbar/pagingmemorytoolbar.js"></script>
+
     <!-- DateTimePicker -->
     <script type="text/javascript" src="static/ext/ux/UX_TimePickerField.js"></script>
     <script type="text/javascript" src="static/ext/ux/UX_DateTimePicker.js"></script>
