--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -31,6 +31,12 @@
     <script src="static/ext/lib/pdf.js/compatibility.js"></script>
     <script src="static/ext/ux/panel/PDF.js"></script>
 
+    <!-- PagingMemoryToolbar -->
+    <script src="static/ext/ux/toolbar/pagingmemorytoolbar.js"></script>
+
+    <!-- SyncStore -->
+    <script src="static/ext/src/data/SyncStore.js"></script>
+
     <!-- DateTimePicker -->
     <script type="text/javascript" src="static/ext/ux/UX_TimePickerField.js"></script>
     <script type="text/javascript" src="static/ext/ux/UX_DateTimePicker.js"></script>
@@ -55,11 +61,13 @@
     <script type="text/javascript" src="static/app/model/UtilityBillRegister.js"></script>
 
     <!-- Stores -->
+    <script type="text/javascript" src="static/app/store/AccountsMemory.js"></script>
+    <script type="text/javascript" src="static/app/store/IssuableReebillsMemory.js"></script>
+    <script type="text/javascript" src="static/app/store/UtilityBillsMemory.js"></script>
+
     <script type="text/javascript" src="static/app/store/Accounts.js"></script>
     <script type="text/javascript" src="static/app/store/AccountsFilter.js"></script>
-    <script type="text/javascript" src="static/app/store/AccountsMemory.js"></script>
     <script type="text/javascript" src="static/app/store/IssuableReebills.js"></script>
-    <script type="text/javascript" src="static/app/store/IssuableReebillsMemory.js"></script>
     <script type="text/javascript" src="static/app/store/JournalEntries.js"></script>
     <script type="text/javascript" src="static/app/store/Payments.js"></script>
     <script type="text/javascript" src="static/app/store/Charges.js"></script>
@@ -73,7 +81,6 @@
     <script type="text/javascript" src="static/app/store/UtilityBillRegisters.js"></script>
     <script type="text/javascript" src="static/app/store/ReeBillVersions.js"></script>
     <script type="text/javascript" src="static/app/store/UtilityBills.js"></script>
-    <script type="text/javascript" src="static/app/store/UtilityBillsMemory.js"></script>
     <script type="text/javascript" src="static/app/store/EstimatedRevenue.js"></script>
 
     <!-- Views -->
