78574604 Cleaned up Ext code

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -74,6 +74,7 @@
     <script type="text/javascript" src="static/app/store/Reconciliations.js"></script>
     <script type="text/javascript" src="static/app/store/ReebillCharges.js"></script>
     <script type="text/javascript" src="static/app/store/Reebills.js"></script>
+    <script type="text/javascript" src="static/app/store/ServiceTypes.js"></script>
     <script type="text/javascript" src="static/app/store/Services.js"></script>
     <script type="text/javascript" src="static/app/store/Preferences.js"></script>
     <script type="text/javascript" src="static/app/store/Timestamps.js"></script>
