72707970 implemented sliders. They're currently not functional

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -92,6 +92,7 @@
     <script type="text/javascript" src="static/app/view/journal/JournalEntries.js"></script>
     <script type="text/javascript" src="static/app/view/journal/NoteForm.js"></script>
     <script type="text/javascript" src="static/app/view/metersandregisters/UtilityBillRegisters.js"></script>
+    <script type="text/javascript" src="static/app/view/metersandregisters/TOUMetering.js"></script>
     <script type="text/javascript" src="static/app/view/payments/Payments.js"></script>
     <script type="text/javascript" src="static/app/view/charges/RoundRuleTextField.js"></script>
     <script type="text/javascript" src="static/app/view/charges/GroupTextField.js"></script>
