72707970 Extended the slider component to allow for dynamically adding and removing thumbs

--- a/reebill/ui/index.html
+++ b/reebill/ui/index.html
@@ -31,11 +31,10 @@
     <script src="static/ext/lib/pdf.js/compatibility.js"></script>
     <script src="static/ext/ux/panel/PDF.js"></script>
 
-    <!-- PagingMemoryToolbar -->
+    <!-- Extensions -->
     <script src="static/ext/ux/toolbar/pagingmemorytoolbar.js"></script>
-
-    <!-- SyncStore -->
     <script src="static/ext/src/data/SyncStore.js"></script>
+    <script src="static/ext/ux/slider/DynamicMultiSlider.js"></script>
 
     <!-- DateTimePicker -->
     <script type="text/javascript" src="static/ext/ux/UX_TimePickerField.js"></script>
