80162552 add Brooke's name change message to reebill/ui/issue_email_template.html

--- a/reebill/ui/issue_email_template.html
+++ b/reebill/ui/issue_email_template.html
@@ -1,4 +1,6 @@
 
+<p>Important! We have officially changed our name from Skyline Innovations to Nextility. The name and colors may be different, but our mission will always stay the same – to be the energy company you love. If you have any questions or concerns, please do not hesitate to reach out!</p>
+
 <p>Please find attached your bills for the dates ending {{ bill_dates }}.</p>
 
 <p>The attached file, {{ last_bill }} reflects the current balance and is the only bill that should be paid.
@@ -9,7 +11,7 @@
 Nextility Billing Department<br/>
 <br/>--
 <div style="text-align:center">
-    <b>NEXTILITY</b>
+    <b>Nextility Inc.</b>
 </div>
 <div style="text-align:center">
     <font size="1">1606 20th St NW, Second Floor, Washington DC 20009</font>
