80162552 update issue_email_template.html with Brooke's name change announcement and formatting changes

--- a/reebill/ui/issue_email_template.html
+++ b/reebill/ui/issue_email_template.html
@@ -1,5 +1,8 @@
 
-<p>Important! We have officially changed our name from Skyline Innovations to Nextility. The name and colors may be different, but our mission will always stay the same – to be the energy company you love. If you have any questions or concerns, please do not hesitate to reach out!</p>
+<p><b>Important!</b> We have officially changed our name from Skyline Innovations to Nextility. The name and colors may be different, but our mission will always stay the same--to be the energy company you love. If you have any questions or concerns, please do not hesitate to reach out!</p>
+
+<br/>
+<br/>
 
 <p>Please find attached your bills for the dates ending {{ bill_dates }}.</p>
 
@@ -9,9 +12,8 @@
 
 <p>Best Regards,<br/>
 Nextility Billing Department<br/>
-<br/>--
+Nextility Inc.</br>
 <div style="text-align:center">
-    <b>Nextility Inc.</b>
 </div>
 <div style="text-align:center">
     <font size="1">1606 20th St NW, Second Floor, Washington DC 20009</font>
