--- a/reebill/ui/issue_email_template.html
+++ b/reebill/ui/issue_email_template.html
@@ -14,6 +14,7 @@
 Nextility Billing Department<br/>
 Nextility Inc.</br>
 <div style="text-align:center">
+    <img src="http://www.nextility.com/email_sig_v1.png">
 </div>
 <div style="text-align:center">
     <font size="1">1606 20th St NW, Second Floor, Washington DC 20009</font>
